[package]
name = "ussd_user_simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
uuid = { version = "1.0", features = ["v4"] }
